# pygmsender

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
pygmsender/: email_sender.py  gmail_sender.py
